--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "npm run build && start-server-and-test start http://localhost:3000 test:cypress",
+    "test:cypress": "cypress run",
+    "test:watch": "start-server-and-test dev http://localhost:3000 test:cypress:watch",
+    "test:cypress:watch": "cypress open"
   },
   "dependencies": {
+    "cypress": "^13.8.0",
+    "cypress-real-events": "^1.12.0",
+    "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "start-server-and-test": "^2.0.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
